--- a/src/app/pages/payroll/transaction/FullAndFinalDetail/payroll.FullAndFinalDetail.html
+++ b/src/app/pages/payroll/transaction/FullAndFinalDetail/payroll.FullAndFinalDetail.html
@@ -69,7 +69,8 @@
                         <div class="col-md-12">
                             <div class="form-group">
                                 <label>{{page.pageinfo.fields.FAFDELOpeninig.text}}</label>
-                                <input class="form-control" type="text" ng-model="entity.FAFDELOpeninig">
+                                <!--<input class="form-control" type="text" ng-model="entity.FAFDELOpeninig">-->
+                                <span class="form-control" ng-bind="entity.FAFDELOpeninig"></span>
                             </div>
                         </div>
                     </div>
@@ -77,7 +78,8 @@
                         <div class="col-md-12">
                             <div class="form-group">
                                 <label>{{page.pageinfo.fields.FAFDPresentDays.text}}</label>
-                                <input class="form-control" type="text" ng-model="entity.FAFDPresentDays">
+                                <!--<input class="form-control" type="text" ng-model="entity.FAFDPresentDays">-->
+                                <span class="form-control" ng-bind="entity.FAFDPresentDays"></span>
                             </div>
                         </div>
                     </div>
@@ -85,7 +87,8 @@
                         <div class="col-md-12">
                             <div class="form-group">
                                 <label>{{page.pageinfo.fields.FAFDCurrentYearEL.text}}</label>
-                                <input class="form-control" type="text" ng-model="entity.FAFDCurrentYearEL">
+                                <!--<input class="form-control" type="text" ng-model="entity.FAFDCurrentYearEL">-->
+                                <span class="form-control" ng-bind="entity.FAFDCurrentYearEL"></span>
                             </div>
                         </div>
                     </div>
@@ -93,7 +96,8 @@
                         <div class="col-md-12">
                             <div class="form-group">
                                 <label>{{page.pageinfo.fields.FAFDELTaken.text}}</label>
-                                <input class="form-control" type="text" ng-model="entity.FAFDELTaken">
+                                <!--<input class="form-control" type="text" ng-model="entity.FAFDELTaken">-->
+                                <span class="form-control" ng-bind="entity.FAFDELTaken"></span>
                             </div>
                         </div>
                     </div>
@@ -110,7 +114,8 @@
                         <div class="col-md-12">
                             <div class="form-group">
                                 <label>{{page.pageinfo.fields.FAFDELEncashable.text}}</label>
-                                <input class="form-control" type="text" ng-model="entity.FAFDELEncashable">
+                                <!--<input class="form-control" type="text" ng-model="entity.FAFDELEncashable">-->
+                                <span class="form-control" ng-bind="entity.FAFDELEncashable"></span>
                             </div>
                         </div>
                     </div>
