--- a/src/app/pages/payroll/transaction/FullAndFinalDetailTz/payroll.FullAndFinalDetailTz.html
+++ b/src/app/pages/payroll/transaction/FullAndFinalDetailTz/payroll.FullAndFinalDetailTz.html
@@ -1,13 +1,286 @@
+<grid-box ng-model="page" ng-show="showEditForm">
+</grid-box>
 
- FULL FINAL TZ
-<div class="row">
-    <div class="col-md-3" ng-show="page.showFilter" style="padding-right:0px; margin-right:0px;  ">
-        <filter-box page="page"></filter-box>
+
+<form name="editForm " novalidate ng-submit="saveForm() " ng-hide="showEditForm ">
+    <div class="panel panel-default xmedium-panel ">
+        <edit-panel-head page="page" page-title="page.pageinfo.title " reset-form="resetFormCommon(editForm) " clear-form="clearFormCommon(editForm) "
+            close-form="closeForm(editForm) " show-close="true " show-save="true " show-clear="true " show-list="false
+ " show-reset="true " condition="true "></edit-panel-head>
+
+        <div class="panel-body " style="padding:5px " ng-scrollbars ng-scrollbars-config="config ">
+
+            <div class="row">
+                <div class="col-md-3">
+                    <div class="form-group">
+                        <label>{{page.pageinfo.fields.FAFEmpId.text}}</label>
+                        <select class="form-control" ng-model="entity.selectedEmp" ng-change="selectedDesignDept()" ng-options="employee.name  for employee in page.pageinfo.selects.FAFEmpId">
+                            </select>
+
+                    </div>
+                </div>
+
+                <div class="col-md-3">
+                    <div class="form-group">
+                        <label>{{page.pageinfo.fields.FAFDDate.text}}</label>
+                        <span class="form-control" ng-bind="entity.FAFDDate"></span>
+                    </div>
+                </div>
+
+                <div class="col-md-3">
+                    <div class="form-group">
+                        <!--<label>{{page.pageinfo.fields.FAFEmpId.text}}</label>-->
+                        <label>Sub Unit</label>
+                        <span class="form-control" ng-bind="entity.SUName"></span>
+                        <!--<input class="form-control" type="text" ng-model="entity.ACODIsApplyFullDay">-->
+
+                    </div>
+                </div>
+
+                <div class="col-md-3">
+                    <div class="form-group">
+                        <!--<label>{{page.pageinfo.fields.FAFEmpId.text}}</label>-->
+                        <label>Department</label>
+                        <span class="form-control" ng-bind="entity.SUName"></span>
+                        <!--<input class="form-control" type="text" ng-model="entity.ACODIsApplyFullDay">-->
+
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-3">
+                    <div class="form-group">
+                        <label>Designation</label>
+                        <select class="form-control" ng-model="entity.selectedEmp" ng-change="selectedDesignDept()" ng-options="employee.name  for employee in page.pageinfo.selects.FAFEmpId">
+                            </select>
+                    </div>
+                </div>
+
+                <div class="col-md-3">
+                    <div class="form-group">
+                        <label>{{page.pageinfo.fields.FFDTZBasic.text}}</label>
+                        <span class="form-control" ng-bind="entity.FAFDDate"></span>
+                    </div>
+                </div>
+
+                <div class="col-md-3">
+                    <div class="form-group">
+                        <!--<label>{{page.pageinfo.fields.FAFEmpId.text}}</label>-->
+                        <label>Sub Unit</label>
+                        <span class="form-control" ng-bind="entity.SUName"></span>
+                        <!--<input class="form-control" type="text" ng-model="entity.ACODIsApplyFullDay">-->
+
+                    </div>
+                </div>
+
+                <div class="col-md-3">
+                    <div class="form-group">
+                        <label>{{page.pageinfo.fields.FFDTZNSSF.text}}</label>
+                        <span class="form-control" ng-bind="entity.SUName"></span>
+                        <!--<input class="form-control" type="text" ng-model="entity.ACODIsApplyFullDay">-->
+
+                    </div>
+                </div>
+                 <div class="col-md-3">
+                    <div class="form-group">
+                        <label>{{page.pageinfo.fields.FFDTZGross.text}}</label>
+                        <span class="form-control" ng-bind="entity.SUName"></span>
+                        <!--<input class="form-control" type="text" ng-model="entity.ACODIsApplyFullDay">-->
+
+                    </div>
+                </div>
+                
+            </div>
+
+            <h3 class="with-line ">Allowance </h3>
+            <div class="row">
+                <div class="col-md-3">
+                    <div class="form-group">
+                        <label>{{page.pageinfo.fields.FFDTZPWorkingDay.text}}</label>
+                        <select class="form-control" ng-model="entity.selectedEmp" ng-change="selectedDesignDept()" ng-options="employee.name  for employee in page.pageinfo.selects.FAFEmpId">
+                            </select>
+
+                    </div>
+                </div>
+
+                <div class="col-md-3">
+                    <div class="form-group">
+                        <label>{{page.pageinfo.fields.FAFDDate.text}}</label>
+                        <span class="form-control" ng-bind="entity.FAFDDate"></span>
+                    </div>
+                </div>
+
+                <div class="col-md-3">
+                    <div class="form-group">
+                        <!--<label>{{page.pageinfo.fields.FAFEmpId.text}}</label>-->
+                        <label>Sub Unit</label>
+                        <span class="form-control" ng-bind="entity.SUName"></span>
+                        <!--<input class="form-control" type="text" ng-model="entity.ACODIsApplyFullDay">-->
+
+                    </div>
+                </div>
+
+                <div class="col-md-3">
+                    <div class="form-group">
+                        <!--<label>{{page.pageinfo.fields.FAFEmpId.text}}</label>-->
+                        <label>Sub Unit</label>
+                        <span class="form-control" ng-bind="entity.SUName"></span>
+                        <!--<input class="form-control" type="text" ng-model="entity.ACODIsApplyFullDay">-->
+
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-3">
+                    <div class="form-group">
+                        <label>{{page.pageinfo.fields.FFDTZSeveranceDays.text}}</label>
+                        <select class="form-control" ng-model="entity.selectedEmp" ng-change="selectedDesignDept()" ng-options="employee.name  for employee in page.pageinfo.selects.FAFEmpId">
+                            </select>
+
+                    </div>
+                </div>
+
+                <div class="col-md-3">
+                    <div class="form-group">
+                        <label>{{page.pageinfo.fields.FAFDDate.text}}</label>
+                        <span class="form-control" ng-bind="entity.FAFDDate"></span>
+                    </div>
+                </div>
+
+                <div class="col-md-3">
+                    <div class="form-group">
+                        <label>{{page.pageinfo.fields.FFDTZUnpaidLeaveDays.text}}</label>
+                        <label>Sub Unit</label>
+                        <span class="form-control" ng-bind="entity.SUName"></span>
+                        <!--<input class="form-control" type="text" ng-model="entity.ACODIsApplyFullDay">-->
+
+                    </div>
+                </div>
+
+                <div class="col-md-3">
+                    <div class="form-group">
+                        <!--<label>{{page.pageinfo.fields.FAFEmpId.text}}</label>-->
+                        <label>Sub Unit</label>
+                        <span class="form-control" ng-bind="entity.SUName"></span>
+                        <!--<input class="form-control" type="text" ng-model="entity.ACODIsApplyFullDay">-->
+
+                    </div>
+                </div>
+
+                <div class="col-md-3">
+                    <div class="form-group">
+                        <label>{{page.pageinfo.fields.FFDTZNOTHours.text}}</label>
+                        <input class="form-control" type="text" ng-model="entity.ACODIsApplyFullDay">
+
+                    </div>
+                </div>
+
+                <div class="col-md-3">
+                    <div class="form-group">
+                        <label>{{page.pageinfo.fields.FFDTNormalOT.text}}</label>
+                        <input class="form-control" type="text" ng-model="entity.ACODIsApplyFullDay">
+                    </div>
+                </div>
+
+                <div class="col-md-3">
+                    <div class="form-group">
+                        <label>{{page.pageinfo.fields.FFDTZHOTHours.text}}</label>
+                        <input class="form-control" type="text" ng-model="entity.ACODIsApplyFullDay">
+
+                    </div>
+                </div>
+
+                <div class="col-md-3">
+                    <div class="form-group">
+                        <label>{{page.pageinfo.fields.FFDTZHolidayOT.text}}</label>
+                        <input class="form-control" type="text" ng-model="entity.ACODIsApplyFullDay">
+                    </div>
+                </div>
+
+                
+            </div>
+
+
+            <h3 class="with-line ">Deduction </h3>
+
+            <div class="row">
+                <div class="col-md-3">
+                    <div class="form-group">
+                        <label>{{page.pageinfo.fields.FAFEmpId.text}}</label>
+                        <select class="form-control" ng-model="entity.selectedEmp" ng-change="selectedDesignDept()" ng-options="employee.name  for employee in page.pageinfo.selects.FAFEmpId">
+                            </select>
+
+                    </div>
+                </div>
+
+                <div class="col-md-3">
+                    <div class="form-group">
+                        <label>{{page.pageinfo.fields.FAFDDate.text}}</label>
+                        <span class="form-control" ng-bind="entity.FAFDDate"></span>
+                    </div>
+                </div>
+
+                <div class="col-md-3">
+                    <div class="form-group">
+                        <!--<label>{{page.pageinfo.fields.FAFEmpId.text}}</label>-->
+                        <label>Sub Unit</label>
+                        <span class="form-control" ng-bind="entity.SUName"></span>
+                        <!--<input class="form-control" type="text" ng-model="entity.ACODIsApplyFullDay">-->
+
+                    </div>
+                </div>
+
+                <div class="col-md-3">
+                    <div class="form-group">
+                        <!--<label>{{page.pageinfo.fields.FAFEmpId.text}}</label>-->
+                        <label>Sub Unit</label>
+                        <span class="form-control" ng-bind="entity.SUName"></span>
+                        <!--<input class="form-control" type="text" ng-model="entity.ACODIsApplyFullDay">-->
+
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-3">
+                    <div class="form-group">
+                        <label>{{page.pageinfo.fields.FAFEmpId.text}}</label>
+                        <select class="form-control" ng-model="entity.selectedEmp" ng-change="selectedDesignDept()" ng-options="employee.name  for employee in page.pageinfo.selects.FAFEmpId">
+                            </select>
+
+                    </div>
+                </div>
+
+                <div class="col-md-3">
+                    <div class="form-group">
+                        <label>{{page.pageinfo.fields.FAFDDate.text}}</label>
+                        <span class="form-control" ng-bind="entity.FAFDDate"></span>
+                    </div>
+                </div>
+
+                <div class="col-md-3">
+                    <div class="form-group">
+                        <!--<label>{{page.pageinfo.fields.FAFEmpId.text}}</label>-->
+                        <label>Sub Unit</label>
+                        <span class="form-control" ng-bind="entity.SUName"></span>
+                        <!--<input class="form-control" type="text" ng-model="entity.ACODIsApplyFullDay">-->
+
+                    </div>
+                </div>
+
+                <div class="col-md-3">
+                    <div class="form-group">
+                        <!--<label>{{page.pageinfo.fields.FAFEmpId.text}}</label>-->
+                        <label>Sub Unit</label>
+                        <span class="form-control" ng-bind="entity.SUName"></span>
+                        <!--<input class="form-control" type="text" ng-model="entity.ACODIsApplyFullDay">-->
+
+                    </div>
+                </div>
+            </div>
+
+        </div>
     </div>
-
-    <div ng-class="{'col-md-12':!page.showFilter, 'col-md-9':page.showFilter}" style="padding-left:0px; margin-left:0px;">
-        <grid-box page="page" box-options="boxSetting">
-        </grid-box>
-    </div>
-</div>
-
+</form>
