--- a/src/app/common/components/gridBox/gridBox.html
+++ b/src/app/common/components/gridBox/gridBox.html
@@ -14,18 +14,22 @@
                                 <i ng-show="page.isLoading" class="fa fa-spinner fa-pulse fa-1x fa-fw"></i>
                             </div>
                             <div class="col-md-9">
+
                                 <div class="pull-right" ng-show="page.boxOptions.customButtons.length==0">
                                     <button ng-show="page.boxOptions.showBack" type="button" class="btn btn-xs btn-default" ng-click="page.goBack()"><i class="ion-backspace"></i>List</button>
-                                    <button ng-show="page.boxOptions.showUpload" type="button" class="btn btn-xs btn-default" ng-click="page.uploadRecord()">
+                                    <button ng-show="page.boxOptions.showUpload && (page.pageinfo.uibuttons==null || page.pageinfo.uibuttons.upload.IsAllowed=='True')"
+                                        type="button" class="btn btn-xs btn-default" ng-click="page.uploadRecord()">
                                             <i class="fa fa-plus-circle" aria-hidden="true"></i>Upload</button>
-                                    <button ng-show="page.boxOptions.showRefresh" type="button" class="btn btn-xs btn-default" ng-click="page.refreshData()"><i 
+                                    <button ng-show="page.boxOptions.showRefresh && (page.pageinfo.uibuttons==null || page.pageinfo.uibuttons.refresh.IsAllowed=='True')"
+                                        type="button" class="btn btn-xs btn-default" ng-click="page.refreshData()"><i 
                                 class="ion-refresh"></i>Refresh</button> &nbsp;
-                                    <button ng-show="page.boxOptions.showAdd" type="button" class="btn btn-xs btn-default" ng-click="page.addRecord(editForm)">
-                                 <i class="fa fa-plus-circle" aria-hidden="true"></i>Add</button>                                    &nbsp; &nbsp;
+                                    <button ng-show="page.boxOptions.showAdd && (page.pageinfo.uibuttons==null || page.pageinfo.uibuttons.create.IsAllowed=='True')"
+                                        type=" button " class="btn btn-xs btn-default " ng-click="page.addRecord(editForm) ">
+                                 <i class="fa fa-plus-circle " aria-hidden="true "></i>Add</button>                                    &nbsp; &nbsp;
 
                                     <select ng-show="page.boxOptions.showCustomView && (page.pageinfo.ucvlist.length>1)" title="Select Status" ng-model="selectedUcvItem"
                                         ng-options="opt.name for opt in page.pageinfo.ucvlist" ng-change="ucvOnChange(selectedUcvItem)">
-                                </select>
+                                    </select>
                                 </div>
                                 <div class="pull-right" ng-show="page.boxOptions.customButtons.length>0 || page.boxOptions.customButtonsWithDefault.length>0">
                                     <button ng-if="page.boxOptions.customButtons.length>0" ng-repeat="button in page.boxOptions.customButtons" type="button"
@@ -63,10 +67,9 @@
                 left:0px;" ng-click="page.showFilter=!page.showFilter">
                     <i ng-class="{'ion-arrow-right-b':!page.showFilter, 'ion-arrow-left-b':page.showFilter}"></i>
                 </button>
-                
-                        <div id="djGrid1" ui-grid="page.gridOptions" 
-                        ui-grid-auto-resize ui-grid-pagination ui-grid-selection ui-grid-pinning ui-grid-edit ui-grid-expandable 
-                            class="djGrid">
+
+                        <div id="djGrid1" ui-grid="page.gridOptions" ui-grid-auto-resize ui-grid-pagination ui-grid-selection ui-grid-pinning ui-grid-edit
+                            ui-grid-expandable class="djGrid">
                             <div class="no-data" ng-if="page.gridOptions.data.length==0 && !page.dataIsLoading">{{page.boxOptions.noResultMessageText}}</div>
                             <div class="no-data font-black" ng-if="page.dataIsLoading">
                                 <i class="fa fa-spinner fa-pulse fa-1x fa-fw"></i> Please wait data is loading....
@@ -121,7 +124,7 @@
                                     <div class="form-group" ng-repeat="col in page.formrows">
                                         <label for="inputPassword3" class="col-sm-5 control-label">{{col.text}}</label>
                                         <div class="col-md-7" ng-switch="col.type">
-                                            <field-box page="page" ng-column="col" ng-entity="entity" form="editForm" fb-change="col.onChangeEvent()" ></field-box>
+                                            <field-box page="page" ng-column="col" ng-entity="entity" form="editForm" fb-change="col.onChangeEvent()"></field-box>
                                         </div>
                                     </div>
                                 </div>
