--- a/src/app/pages/organization/employees/add/employeeAdd.html
+++ b/src/app/pages/organization/employees/add/employeeAdd.html
@@ -10,15 +10,12 @@
 <div ba-panel ba-panel-class="x-medium" ba-panel-title="Add Employee">
   <form name="form" ng-submit="addCtrl.saveForm(addCtrl.empAdd)">
     <div class="row">
-  
-    <div class="col-sm-1">
+
+      <div class="col-sm-1">
         <div class="form-group">
           <label>Title*</label>
-          <select id="inputTitle" required
-                  ng-model="addCtrl.empAdd.EmpTitleId"
-                  class="form-control" ng-options="title.value as title.name for title in addCtrl.dropDownList[0]"
-                  data-placeholder="Select Nav Menu" 
-                  >
+          <select id="inputTitle" required ng-model="addCtrl.empAdd.EmpTitleId" class="form-control" ng-options="title.value as title.name for title in addCtrl.dropDownList[0]"
+            data-placeholder="Select Nav Menu">
           <option></option>
        </select>
         </div>
@@ -49,31 +46,27 @@
       <div class="col-sm-4">
         <div class="form-group">
           <label>Gender*</label>
-          <select id="inputGender" 
-                  ng-model="addCtrl.empAdd.PdGenderId"
-                  class="form-control" 
-                  ng-options="gender.value as gender.name for gender in addCtrl.dropDownList[3]"
-                  data-placeholder="Select Nav Menu"
-                  required>
+          <select id="inputGender" ng-model="addCtrl.empAdd.PdGenderId" class="form-control" ng-options="gender.value as gender.name for gender in addCtrl.dropDownList[3]"
+            data-placeholder="Select Nav Menu" required>
                   <option></option>
                </select>
-             
+
         </div>
       </div>
       <div class="col-sm-4">
         <div class="form-group">
-          <label>Date Of Joining*</label>    
-           <div class="input-group" moment-picker="addCtrl.empAdd.JDDate" format="DD-MMM-YYYY" start-view="month" max-date="col.maxDate"
-                min-date="col.minDate">
-                <span class="input-group-addon">
+          <label>Date Of Joining*</label>
+          <div class="input-group" moment-picker="addCtrl.empAdd.JDDate" format="DD-MMM-YYYY" start-view="month" max-date="col.maxDate"
+            min-date="col.minDate">
+            <span class="input-group-addon">
                     <i class="fa fa-calendar"></i>
                 </span>
-                <input valid-text ng-column="col" name="{{col.name}}" id="{{col.name}}" ng-readonly="true" class="form-control" placeholder="Select a date"
-                    ng-model="addCtrl.empAdd.JDDate" ng-model-options="{ updateOn: 'blur' }">
-                <span class="input-group-btn">
+            <input valid-text ng-column="col" name="{{col.name}}" id="{{col.name}}" ng-readonly="true" class="form-control" placeholder="Select a date"
+              ng-model="addCtrl.empAdd.JDDate" ng-model-options="{ updateOn: 'blur' }">
+            <span class="input-group-btn">
                     <button class="btn btn-secondary" ng-click="addCtrl.empAdd.JDDate=''" type="button"><i class="fa fa-close"></i></button>
                 </span>
-            </div>  
+          </div>
           <!--<datepicker date-format="dd/MMMM/yyyy" selector="form-control">           
             <input ng-model="addCtrl.empAdd.JDDate" name="doj" type="text" class="form-control"   placeholder="dd-mm-yyyy" required >         
            
@@ -83,8 +76,8 @@
       <div class="col-sm-4">
         <div class="form-group">
           <label>Mobile*</label>
-          <input numeric-Only type="text" class="form-control"  minlength="10" maxlength="17" ng-model="addCtrl.empAdd.PdMobileNo"
-            placeholder="Mobile" required>
+          <input numeric-Only type="text" class="form-control" minlength="10" maxlength="17" ng-model="addCtrl.empAdd.PdMobileNo" placeholder="Mobile"
+            required>
         </div>
       </div>
     </div>
@@ -92,12 +85,8 @@
       <div class="col-sm-4">
         <div class="form-group">
           <label>Department*</label>
-          <select id="inputDepartment" 
-                  ng-model="addCtrl.empAdd.JDDeptId" 
-                  class="form-control" 
-                  ng-options="department.value as department.name for department in addCtrl.dropDownList[1]"
-                  data-placeholder="Select Nav Menu" 
-                  required>
+          <select id="inputDepartment" ng-model="addCtrl.empAdd.JDDeptId" class="form-control" ng-options="department.value as department.name for department in addCtrl.dropDownList[1]"
+            data-placeholder="Select Nav Menu" required>
                   <option></option>
           </select>
         </div>
@@ -105,12 +94,8 @@
       <div class="col-sm-4">
         <div class="form-group">
           <label>Designation*</label>
-          <select id="inputDesignation" 
-                  ng-model="addCtrl.empAdd.JDDesgId"
-                  class="form-control" 
-                  ng-options="designation.value as designation.name for designation in addCtrl.dropDownList[2]"               
-                  data-placeholder="Select Nav Menu" 
-                  required>
+          <select id="inputDesignation" ng-model="addCtrl.empAdd.JDDesgId" class="form-control" ng-options="designation.value as designation.name for designation in addCtrl.dropDownList[2]"
+            data-placeholder="Select Nav Menu" required>
                   <option></option>
                </select>
         </div>
@@ -118,12 +103,8 @@
       <div class="col-sm-4">
         <div class="form-group">
           <label>Employment Type*</label>
-          <select id="inputEmployeeType" 
-                  ng-model="addCtrl.empAdd.JDEmploymentId"
-                  class="form-control"
-                  ng-options="employeeType.value as employeeType.name for employeeType in addCtrl.dropDownList[4]"
-                  data-placeholder="Select Nav Menu"
-                  required>
+          <select id="inputEmployeeType" ng-model="addCtrl.empAdd.JDEmploymentId" class="form-control" ng-options="employeeType.value as employeeType.name for employeeType in addCtrl.dropDownList[4]"
+            data-placeholder="Select Nav Menu" required>
                   <option></option>
                </select>
         </div>
@@ -133,55 +114,71 @@
       <div class="col-sm-4">
         <div class="form-group">
           <label>Grade*</label>
-          <select  id="inputGrade" 
-                   ng-model="addCtrl.empAdd.JDEmpGradeId" 
-                   class="form-control" 
-                   ng-options="grade.value as grade.name for grade in addCtrl.dropDownList[5]"
-                   required>
+          <select id="inputGrade" ng-model="addCtrl.empAdd.JDEmpGradeId" class="form-control" ng-options="grade.value as grade.name for grade in addCtrl.dropDownList[5]"
+            required>
                    <option></option>
                </select>
-            
+
         </div>
       </div>
       <div class="col-sm-4">
         <div class="form-group">
           <label>Level*</label>
-          <select id="inputLevel" 
-                  ng-model="addCtrl.empAdd.JDEmpLevelId" 
-                  class="form-control" 
-                  ng-options="level.value as level.name for level in addCtrl.dropDownList[6]"
-                  ng-change="vm.typeOnChange(vm.section.SecType,'Add')" 
-                  required>
+          <select id="inputLevel" ng-model="addCtrl.empAdd.JDEmpLevelId" class="form-control" ng-options="level.value as level.name for level in addCtrl.dropDownList[6]"
+            ng-change="vm.typeOnChange(vm.section.SecType,'Add')" required>
                   <option></option>
                </select>
-              
+
         </div>
       </div>
       <div class="col-sm-4">
         <div class="form-group">
           <label>Employee Code*</label>
-          <input type="text" class="form-control text_type_bold" disabled="disabled"  ng-model="addCtrl.EmpCode"
-            placeholder="Employee Code">
+          <input type="text" class="form-control text_type_bold" disabled="disabled" ng-model="addCtrl.EmpCode" placeholder="Employee Code">
         </div>
       </div>
     </div>
     <div class="row">
- 
+      <div class="col-sm-4">
+        <div class="form-group">
+          <label>Reporting1*</label>
+          <select id="inputLevel" ng-model="addCtrl.empAdd.JDReporting1" class="form-control" ng-options="emp.value as emp.name for emp in addCtrl.dropDownList[7]"
+            required>
+           <option></option>
+          </select>
+        </div>
+      </div>
+      <div class="col-sm-4">
+        <div class="form-group">
+          <label>Reporting2*</label>
+          <select id="inputLevel" ng-model="addCtrl.empAdd.JDReporting2" class="form-control" ng-options="emp.value as emp.name for emp in addCtrl.dropDownList[7]"
+            required>
+             <option></option>
+            </select>
+        </div>
+      </div>
+      <div class="col-sm-4">
+        <div class="form-group">
+            <label>Reporting HR*</label>
+            <select id="inputLevel" ng-model="addCtrl.empAdd.JDReportingHR" class="form-control" ng-options="emp.value as emp.name for emp in addCtrl.dropDownList[7]"
+              required>
+               <option></option>
+              </select>        </div>
+      </div>
+    </div>
+    <div class="row">
+
       <div class="col-sm-4">
         <div class="form-group">
           <label>Other Identity</label>
           <input type="text" class="form-control" ng-model="addCtrl.empAdd.PDOtherNumber" placeholder="Other Identity">
         </div>
       </div>
-       <div class="col-sm-4">
+      <div class="col-sm-4">
         <div class="form-group">
           <label>Group</label>
-             <select id="inputEmployeeType" 
-                  ng-model="addCtrl.empAdd.JDGroupId"
-                  class="form-control"
-                  ng-options="group.GMCId as group.GMCName for group in addCtrl.groupList"
-                  data-placeholder="Select Nav Menu"
-                  required>
+          <select id="inputEmployeeType" ng-model="addCtrl.empAdd.JDGroupId" class="form-control" ng-options="group.GMCId as group.GMCName for group in addCtrl.groupList"
+            data-placeholder="Select Nav Menu" required>
                   <option></option>
                </select>
         </div>
