--- a/src/app/pages/payroll/transaction/FullAndFinalDetailTz/payroll.FullAndFinalDetailTz.html
+++ b/src/app/pages/payroll/transaction/FullAndFinalDetailTz/payroll.FullAndFinalDetailTz.html
@@ -1,4 +1,4 @@
-<grid-box ng-model="page" ng-show="showEditForm">
+<grid-box ng-model="page" ng-hide="showGrid">
 </grid-box>
 
 
@@ -233,3 +233,11 @@
         </div>
     </div>
 </form>
+
+<div ng-hide="showReport">
+    <label></label>
+    <div>
+        <button class="btn btn-primary" type="button" ng-click="closeReport();">Close</button>
+    </div>
+    <report-viewer ng-model="pageReport"></report-viewer>
+</div>
