--- a/src/app/pages/payroll/transaction/FullAndFinalDetail/payroll.FullAndFinalDetail.html
+++ b/src/app/pages/payroll/transaction/FullAndFinalDetail/payroll.FullAndFinalDetail.html
@@ -123,7 +123,8 @@
                         <div class="col-md-12">
                             <div class="form-group">
                                 <label>{{page.pageinfo.fields.FAFDJoinYear.text}}</label>
-                                <input class="form-control" type="text" ng-model="entity.FAFDJoinYear">
+                                <!--<input class="form-control" type="text" ng-model="entity.FAFDJoinYear">-->
+                                <span class="form-control" ng-bind="entity.FAFDJoinYear"></span>
                             </div>
                         </div>
                     </div>
@@ -132,7 +133,8 @@
                         <div class="col-md-12">
                             <div class="form-group">
                                 <label>{{page.pageinfo.fields.FAFDGratuity.text}}</label>
-                                <input class="form-control" type="text" ng-model="entity.FAFDGratuity">
+                                <!--<input class="form-control" type="text" ng-model="entity.FAFDGratuity">-->
+                                <span class="form-control" ng-bind="entity.FAFDGratuity"></span>
                             </div>
                         </div>
                     </div>
@@ -140,7 +142,8 @@
                         <div class="col-md-12">
                             <div class="form-group">
                                 <label>{{page.pageinfo.fields.LoanOutStandingAmount.text}}</label>
-                                <input class="form-control" type="text" ng-model="entity.LoanOutstanding">
+                                <!--<input class="form-control" type="text" ng-model="entity.LoanOutstanding">-->
+                                <span class="form-control" ng-bind="entity.LoanOutstanding"></span>
                             </div>
                         </div>
                     </div>
