--- a/src/app/common/components/gridBox/gridBox.html
+++ b/src/app/common/components/gridBox/gridBox.html
@@ -17,13 +17,13 @@
 
                                 <div class="pull-right" ng-show="page.boxOptions.customButtons.length==0">
                                     <button ng-show="page.boxOptions.showBack" type="button" class="btn btn-xs btn-default" ng-click="page.goBack()"><i class="ion-backspace"></i>List</button>
-                                    <button ng-show="page.boxOptions.showUpload && (page.pageinfo.uibuttons==null || page.pageinfo.uibuttons.upload.IsAllowed=='True')"
+                                    <button ng-show="page.boxOptions.showUpload && (page.pageinfo.uibuttons.upload.IsAllowed=='True' || (isAdmin && isManager))"
                                         type="button" class="btn btn-xs btn-default" ng-click="page.uploadRecord()">
                                             <i class="fa fa-plus-circle" aria-hidden="true"></i>Upload</button>
-                                    <button ng-show="page.boxOptions.showRefresh && (page.pageinfo.uibuttons==null || page.pageinfo.uibuttons.refresh.IsAllowed=='True')"
+                                    <button ng-show="page.boxOptions.showRefresh && (page.pageinfo.uibuttons.refresh.IsAllowed=='True' || (isAdmin && isManager))"
                                         type="button" class="btn btn-xs btn-default" ng-click="page.refreshData()"><i 
                                 class="ion-refresh"></i>Refresh</button> &nbsp;
-                                    <button ng-show="page.boxOptions.showAdd && (page.pageinfo.uibuttons==null || page.pageinfo.uibuttons.create.IsAllowed=='True')"
+                                    <button ng-show="page.boxOptions.showAdd && (page.pageinfo.uibuttons.create.IsAllowed=='True' || (isAdmin && isManager))"
                                         type=" button " class="btn btn-xs btn-default " ng-click="page.addRecord(editForm) ">
                                  <i class="fa fa-plus-circle " aria-hidden="true "></i>Add</button>                                    &nbsp; &nbsp;
 
