--- a/src/app/pages/urm/permission/urm.permission.html
+++ b/src/app/pages/urm/permission/urm.permission.html
@@ -38,7 +38,7 @@
                                     <li ng-repeat="opt in activityList">
                                         <div class="checkbox">
                                             <label class="custom-checkbox">      
-                                                    <input  type="checkbox"  ng-model="opt.IsAllowed"> 
+                                                    <input ng-change="activityOnChange(opt.MenuActivityId,opt.IsAllowed)"   type="checkbox"  ng-model="opt.IsAllowed"> 
                                                     <span>{{opt.ActText}}</span>
                                                 </label>
                                         </div>
