--- a/src/app/pages/payroll/transaction/FullAndFinalDetailTz/payroll.FullAndFinalDetailTz.html
+++ b/src/app/pages/payroll/transaction/FullAndFinalDetailTz/payroll.FullAndFinalDetailTz.html
@@ -229,11 +229,15 @@
             </div>
 
             <div class="form-group" ng-show="showStatus">
-                <label for="inputPassword" class="col-xs-offset-6 control-label col-xs-2">Status<span style="color:red">*</span></label>
+                <label for="inputPassword" class="control-label col-xs-2">Status<span style="color:red">*</span></label>
                 <div class="col-xs-4">
                     <select class="form-control" ng-model="entity.StatusId" ng-options="status.value as status.name for status in page.pageinfo.statuslist"></select>
                 </div>
-              
+                <label for="inputPassword" class="control-label col-xs-2">Comment<span style="color:red">* </label>
+                <div class="col-xs-4">
+                    <textarea class="form-control" ng-model="entity.FFDTZComment"></textarea>
+                </div>
+
             </div>
 
 
