--- a/src/app/pages/payroll/transaction/FullAndFinalDetail/payroll.FullAndFinalDetail.html
+++ b/src/app/pages/payroll/transaction/FullAndFinalDetail/payroll.FullAndFinalDetail.html
@@ -143,7 +143,7 @@
                             <div class="form-group">
                                 <label>{{page.pageinfo.fields.LoanOutStandingAmount.text}}</label>
                                 <!--<input class="form-control" type="text" ng-model="entity.LoanOutstanding">-->
-                                <span class="form-control" ng-bind="entity.LoanOutstanding"></span>
+                                <span class="form-control" ng-bind="entity.FAFDLoanOutstanding"></span>
                             </div>
                         </div>
                     </div>
@@ -151,7 +151,7 @@
                         <div class="col-md-12">
                             <div class="form-group">
                                 <label>{{page.pageinfo.fields.FAFDPayDays.text}}</label>
-                                <input class="form-control" type="text" ng-change="totalPayDays()" ng-model="entity.payDays">
+                                <input class="form-control" type="text" ng-change="totalPayDays()" ng-model="entity.FAFDPayDays">
                             </div>
                         </div>
                     </div>
@@ -202,8 +202,38 @@
                         <span class="form-control" ng-bind="entity.FAFDNetPayment"></span>
                     </div>
                 </div>
-
             </div>
+
+
+
+            <div class="row" ng-show="showStatus">
+
+                <div class="col-md-4">
+                    <div class="form-group">
+                        <label for="inputPassword">Status<span style="color:red">*</span></label>
+                        <select class="form-control" ng-model="entity.StatusId" ng-options="status.value as status.name for status in page.pageinfo.statuslist"></select>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="form-group">
+                        <label for="inputPassword">Comment<span style="color:red">* </label>
+                        <textarea class="form-control" ng-model="entity.FAFDComment"></textarea>
+                    </div>
+                </div>
+            </div>
+
+
+            <!--<div class="form-group" ng-show="showStatus">
+                <label for="inputPassword" class="control-label col-xs-2">Status<span style="color:red">*</span></label>
+                <div class="col-xs-4">
+                    <select class="form-control" ng-model="entity.StatusId" ng-options="status.value as status.name for status in page.pageinfo.statuslist"></select>
+                </div>
+                <label for="inputPassword" class="control-label col-xs-2">Comment<span style="color:red">* </label>
+                <div class="col-xs-4">
+                    <textarea class="form-control" ng-model="entity.FAFDComment"></textarea>
+                </div>
+
+            </div>-->
 
         </div>
     </div>
