--- a/src/app/pages/organization/general/companies/companies.html
+++ b/src/app/pages/organization/general/companies/companies.html
@@ -74,7 +74,7 @@
                     </form>
                 </ba-wizard-step>
 
-                <ba-wizard-step title="Branch" form="BranchName">
+                <ba-wizard-step title="{{resources['branch'].text}}" form="BranchName">
                     <form name="BranchName" novalidate>
                         <div class="row">
                             <div class="col-md-6">
@@ -92,7 +92,7 @@
                         </div>
                     </form>
                 </ba-wizard-step>
-                <ba-wizard-step title="SubUnit" form="SubUnitName">
+                <ba-wizard-step title="{{resources['subunit'].text}}" form="SubUnitName">
                     <form name="SubUnitName" novalidate>
                         <div class="row">
                             <div class="col-md-6">
