--- a/src/app/common/components/gridBox/gridBox.html
+++ b/src/app/common/components/gridBox/gridBox.html
@@ -17,14 +17,15 @@
 
                                 <div class="pull-right" ng-show="page.boxOptions.customButtons.length==0">
                                     <button ng-show="page.boxOptions.showBack" type="button" class="btn btn-xs btn-default" ng-click="page.goBack()"><i class="ion-backspace"></i>List</button>
-                                    <button ng-show="page.boxOptions.showUpload && (page.pageinfo.uibuttons.upload.IsAllowed || (isAdmin && isManager))"
-                                        type="button" class="btn btn-xs btn-default" ng-click="page.uploadRecord()">
+                                    <button ng-show="page.boxOptions.showUpload && (page.pageinfo.uibuttons.upload.IsAllowed || (isAdmin && isManager))" type="button"
+                                        class="btn btn-xs btn-default" ng-click="page.uploadRecord()">
                                             <i class="fa fa-plus-circle" aria-hidden="true"></i>Upload</button>
-                                    <button ng-show="page.boxOptions.showRefresh && (page.pageinfo.uibuttons.refresh.IsAllowed || (isAdmin && isManager))"
-                                        type="button" class="btn btn-xs btn-default" ng-click="page.refreshData()"><i 
-                                class="ion-refresh"></i>Refresh</button> &nbsp;
-                                    <button ng-show="page.boxOptions.showAdd && (page.pageinfo.uibuttons.create.IsAllowed || (isAdmin && isManager))"
-                                        type=" button " class="btn btn-xs btn-default " ng-click="page.addRecord(editForm) ">
+                                    <button ng-show="page.boxOptions.showRefresh && (page.pageinfo.uibuttons.refresh.IsAllowed || (isAdmin && isManager))" type="button"
+                                        class="btn btn-xs btn-default" ng-click="page.refreshData()"><i 
+                                class="ion-refresh"></i>Refresh</button> &nbsp; 
+                             
+                                    <button ng-show="page.boxOptions.showAdd && (page.pageinfo.uibuttons.create.IsAllowed || (isAdmin && isManager))" type=" button "
+                                        class="btn btn-xs btn-default " ng-click="page.addRecord(editForm) ">
                                  <i class="fa fa-plus-circle " aria-hidden="true "></i>Add</button>                                    &nbsp; &nbsp;
 
                                     <select ng-show="page.boxOptions.showCustomView && (page.pageinfo.ucvlist.length>1)" title="Select Status" ng-model="selectedUcvItem"
@@ -115,8 +116,8 @@
                             </div>
                         </div>
                     </div>-->
-                    
-                        <edit-panel-head  page="page" page-title="page.pageinfo.tagline" show-save="editForm.untouch" reset-form="resetForm(editForm)"
+
+                        <edit-panel-head page="page" page-title="page.pageinfo.tagline" show-save="editForm.untouch" reset-form="resetForm(editForm)"
                             clear-form="clearForm(editForm)" condition="true" show-list="false" show-close="true" close-form="closeForm(editForm)"></edit-panel-head>
 
                         <div class="panel-body">
