--- a/src/app/pages/payroll/masters/paybandtemplate/paybandtemp.html
+++ b/src/app/pages/payroll/masters/paybandtemplate/paybandtemp.html
@@ -37,6 +37,20 @@
                             <div id="djGridPay" ui-grid="payTempGridOptions" ui-grid-expandable ui-grid-auto-resize ui-grid-pagination ui-grid-selection
                                 ui-grid-pinning ui-grid-edit class="paybandgrid">
                             </div>
+                            <div class="row">
+                                <div class="col-md-8">
+                                    <div class="col-md-3  pull-left">
+                                        <button ng-click="addNewRule()" type="button" class="btn btn-info"><i class="fa fa-plus"></i> Add New Head</button>
+                                    </div>
+                                    <div class="col-lg-3">
+                                        <select class="form-control" ng-model="headId" ng-change="existHeadId=true" ng-options="head.value as head.name for  head in rulePage.pageinfo.fields.PBTRSHId.options | filter:{SHIsTotal:true}">
+                                        </select>
+                                    </div>
+                                    <div ng-show="existHeadId" class="col-lg-2">
+                                        <button ng-click="addToltalEarningDeductionRule(headId)" type="button" class="btn btn-info"><i class="fa fa-plus"></i> Add</button>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
 
                     </div>
