--- a/src/app/pages/help/help.html
+++ b/src/app/pages/help/help.html
@@ -49,7 +49,7 @@
                                 </ul>
                             </div>-->
                     <div class="modal-footer">
-                        <button ng-click="saveActivity()" class="btn btn-info btn-lg" ng-disabled="isSavingActivity">
+                        <button ng-click="saveHelp()" class="btn btn-info btn-lg" ng-disabled="isSavingActivity">
                                             <i ng-show="isSavingActivity" class="fa fa-spinner fa-pulse fa-1x fa-fw"></i>
                                             <span ng-hide="isSavingActivity">Save</span>
                                             <span ng-show="isSavingActivity">Saving..</span>
