--- a/src/app/pages/organization/employees/templates/account/account-view.html
+++ b/src/app/pages/organization/employees/templates/account/account-view.html
@@ -120,7 +120,7 @@
         </div>
 
         <div ng-if="empTabCtrl.entity.PFPPFIsActive">
-          <h3 class="">PF Account</h3>
+          <h3 class="">PPF Account</h3>
           <hr>
           <div class="row">
             <div class="col-sm-4">
@@ -153,7 +153,7 @@
         </div>
 
         <div ng-if="empTabCtrl.entity.ESIIsActive">
-          <h3 class="">ESI Account</h3>
+          <h3 class="">NSSF Account</h3>
           <hr>
           <div class="row">
             <div class="col-sm-4">
